--- a/src/components/Form/styles.css
+++ b/src/components/Form/styles.css
@@ -1,7 +1,26 @@
 .form-container {
-  min-width: 80%;
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .form-fields {
-  justify-content: flex-end;
+    justify-content: flex-end;
+}
+
+.button-finish {
+    color: #fff;
+    background-color: #ff9800;
+    width: 10rem;
+    height: 2rem;
+    font-size: 1.1rem;
+    border: 0;
+    border-radius: 4px;
+    overflow: hidden;
+    margin-top: auto;
+    display: flex;
+    align-items: center;
+    text-align: center;
 }
