--- a/src/pages/Checkout/styles.css
+++ b/src/pages/Checkout/styles.css
@@ -1,15 +1,48 @@
 .card {
-  background-color: #fff;
-  margin: 30px auto;
-  width: 300px;
-  height: 300px;
-  border-radius: 5px;
-  box-shadow: 5px 5px 30px 7px rgba(221, 213, 213, 0.25), -5px -5px 30px 7px rgba(221, 213, 213, 0.25);
-  cursor: pointer;
-  transition: 0.4s;
+    background-color: #fff;
+    margin: 7rem auto;
+    width: 20%;
+    height: 22rem;
+    border-radius: 5px;
+    box-shadow: 5px 5px 30px 7px rgba(221, 213, 213, 0.25), -5px -5px 30px 7px rgba(221, 213, 213, 0.25);
+    cursor: pointer;
+    transition: 0.4s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.card>h2 {
+    color: #546e7a;
+}
+
+.card>img {
+    width: 8rem;
+}
+
+.card>p {
+    color: #59727e;
+    text-align: center;
+}
+
+.card>p>strong {
+    color: #50bbe9;
+    margin-right: 0.5rem;
 }
 
 .new-buy {
-  background-color: #ff9800;
-  color: #fff;
+    color: #fff;
+    background-color: #ff9800;
+    width: 10rem;
+    height: 2rem;
+    font-size: 0.7rem;
+    border: 0;
+    border-radius: 4px;
+    overflow: hidden;
+    margin-top: auto;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 1rem;
 }
